--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -42,6 +42,8 @@ button {
 		<br>
 		<button onclick="exec('accurateLocationEnd')">accurateLocationEnd</button>
 		<br>
+		<button onclick="exec('resetCruncher')">resetCruncher</button>
+		<br>
 	</center>
 </body>
 </html>
