--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -34,6 +34,8 @@ button {
 		<br>
 		<button onclick="exec('sendEvent')">sendEvent</button>
 		<br>
+		<button onclick="exec('crunchEvent')">crunchEvent</button>
+		<br>
 		<button onclick="exec('appLogin')">appLogin</button>
 		<br>
 		<button onclick="exec('appPayment')">appPayment</button>
