--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -34,15 +34,11 @@ button {
 		<br>
 		<button onclick="exec('sendEvent')">sendEvent</button>
 		<br>
-		<button onclick="exec('crunchEvent')">crunchEvent</button>
+		<button onclick="exec('sendEvent2')">sendEvent2</button>
 		<br>
 		<button onclick="exec('appLogin')">appLogin</button>
 		<br>
 		<button onclick="exec('appPayment')">appPayment</button>
-		<br>
-		<button onclick="exec('accurateLocation')">accurateLocation</button>
-		<br>
-		<button onclick="exec('accurateLocationEnd')">accurateLocationEnd</button>
 		<br>
 		<button onclick="exec('resetCruncher')">resetCruncher</button>
 		<br>
